test/error/parse/ExpectThen.mod
MODULE ExpectThen;
BEGIN
  IF TRUE END;
END ExpectThen.
